# geminiclaw

./: .gitignore  DESIGN.md  DESIGN_zh.md  GEMINI.md  Lessons.md  README.md  README_zh.md  TODO.md  config.example.toml  pyproject.toml
claw-extension/: gemini-extension.json
claw-extension/commands/claw/: configure.toml  debug.toml  setup.toml  start.toml  status.toml  stop.toml
src/: bot.py  configure.py  db.py  service.py
src/geminiclaw/: agent.py  bot.py  chatbot.py  cli.py  config.py  db.py  discord.py  google_chat.py  service.py  utils.py
src/geminiclaw/resources/: config.example.toml  system.md
src/geminiclaw/resources/workspace/: .gitattributes  .gitignore  bootstrap.sh  config.toml
src/geminiclaw/resources/workspace/.gemini/: sandbox-macos-geminiclaw.sb  settings.json
src/geminiclaw/resources/workspace/.gemini/policy/: tools.toml
src/geminiclaw/resources/workspace/cronjobs/: Heartbeat.md  Memory Updates.md
src/geminiclaw/resources/workspace/instructions/: Role Playing.md  Rules.md  User.md
src/geminiclaw/resources/workspace/memory/: Background Tasks.md  Errors.md  Learnings.md  Progress.md
src/geminiclaw/resources/workspace/projects/: Readme.md
src/geminiclaw/resources/workspace/roles/kurisu/: intro.md
tests/: test_agent.py  test_bot.py  test_cli.py  test_config.py  test_db.py  test_google_chat.py  test_slash_commands.py
tutorials/: automatic_backup.md  background_tasks.md  background_tasks_zh.md  google_chat_tutorial.md  memory_management.md  memory_management_zh.md  role_playing.md  role_playing_zh.md  security.md  security_zh.md
(+9 files in other folders)
